crates/smart-config/tests/ui/derives/bogus_deprecated_path.rs
use smart_config::DescribeConfig;

#[derive(DescribeConfig)]
struct TestConfig {
    #[config(deprecated = "..what..")]
    field: u64,
}

fn main() {}
